--- a/adra.css
+++ b/adra.css
@@ -1,4 +1,5 @@
 *{
+  font-family: 'Courier New', Courier, monospace;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -21,7 +22,7 @@ header {
   align-items: center;
 }
 .navbar a {
-  color: #198754;
+  color: #005e4e;
 }
 
 .navbar .logo {
@@ -44,7 +45,7 @@ header {
 .navbar .menu {
   display: none;
   position: absolute;
-  color: #198754;
+  color: #005e4e;
   top: 50px;
   right: 30px;
   width: 35px;
@@ -62,13 +63,12 @@ header {
     backdrop-filter: blur(7px);
     width: 100%;
     height: 100vh;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center; 
-    margin-left: -100%; 
   }
-  .navlinks.mobile-menu {
-    margin-left: 0; 
+  .nav-links.mobile-menu {
+    display: flex;
    }
 
   .nav-links ul {
@@ -93,10 +93,8 @@ header {
 
 }
 
-body{
-  font-family: 'Courier New', Courier, monospace;
-}
-
-button{
-  background-color: #198754;
+.navbar button{
+/* background-color: black; */
+background-color: rgba(255,255,255,0);
+border: 0;
 }
