--- a/adra.css
+++ b/adra.css
@@ -1,17 +1,22 @@
 *{
-  font-family: 'Courier New', Courier, monospace;
-  margin: 0;
-  padding: 0;
+  font-family: sans-serif;
   text-decoration: none;
   list-style: none;
+  box-sizing: border-box;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 header {
-  height: 100vh;
+  height: 15vh;
   width: 100vw;
   background-color: black;
+  flex-shrink: 0;
 }
-
+ /* Nav bar */
 .navbar{
   position: absolute;
   padding: 50px;
@@ -26,8 +31,9 @@ header {
 }
 
 .navbar .logo {
-  height: 2em;
+  height: 1em;
   font-weight: bold;
+  top: 30px;
 }
 
 .navbar .nav-links ul{
@@ -51,12 +57,221 @@ header {
   width: 35px;
 }
 
+.navbar button{
+background-color: rgba(255,255,255,0);
+border: 0;
+}
+
+
+
+/* main*/ 
+main {
+  background-color: #95d4ca;
+  padding: 2vh;
+  flex: 1 0 auto;
+  
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2vh;
+  justify-content: space-around;
+}
+
+.wrapper .card {
+  position: relative;
+  height: 400px;
+  width: 400px;
+  padding: 2rem 2rem;
+  background: #fff;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+  transition: 0.5s ease-in-out;
+  flex-direction: column;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.card:hover {
+  transform: translateY(20px);
+}
+
+.card:before{
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(0,176,155,0.5), rgba(150,201,61,1));
+  z-index: 2;
+  transition: 0.5s all;
+  opacity: 0;
+}
+
+.card:hover:before{
+  opacity: 1;
+}
+
+.card .info {
+  position: relative;
+  z-index: 3;
+  color :#fff;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s all;
+  bottom: 0;
+  left: 0;
+}
+
+.card:hover .info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.card .info h2{
+  margin: 0;
+}
+
+.card .info p{
+  letter-spacing: 1px;
+  font-size: 15px;
+  margin-top: 8px;
+  margin-bottom: 20px;
+}
+
+.card .info .btn{
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  background: #fff;
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+
+}
+
+.card .info .btn:hover {
+  box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+}
+
+/* Footer*/
+
+.footer-distributed {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 0;
+  color: #005e4e;
+  background-color: #2d2a30;
+  box-sizing: border-box;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 50px 50px 60px 50px;
+}
+
+.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.footer-distributed .footer-left {
+  width: 30%;
+}
+
+.footer-distributed h3 {
+  font: normal 36px 'Cookie', cursive;
+  margin: 0;
+}
+
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-center {
+  width: 35%;
+}
+
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.footer-distributed .footer-center p {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+.footer-distributed .footer-right {
+  width: 30%;
+}
+
+.footer-distributed .footer-medias {
+  margin-top: 25px;
+}
+
+.footer-distributed .footer-medias a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
+.footer-distributed .footer-medias a:hover {
+  background-color: #1a7932;
+}   
+
+
+/* Responsive */
+
 @media  screen and (max-width:900px) {
   .navbar {
     padding: 0;
   }
   .nav-links {
-    position: absolute;
     top: 0;
     left: 0;
     background-color: rgba(255,255,255,0.20);
@@ -87,14 +302,23 @@ header {
 
   .navbar .logo {
     position: absolute;
-    top: 50px;
+    top: 30px;
     left: 50px;
   }
+  .footer-distributed {
+    flex-shrink: 0;
+    bottom: 0;
+  }
 
-}
+  .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+    /*display: block;*/
+    width: 100%;
+    height: 100%;
+    padding: 1vh;
+    text-align: center;
+  }
 
-.navbar button{
-/* background-color: black; */
-background-color: rgba(255,255,255,0);
-border: 0;
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
 }
